# algorithm

./: .gitignore  README.md  pyproject.toml
archive/: README.md
archive/pre_framework_improvements_20260714/: README.md  pyproject.toml
archive/pre_framework_improvements_20260714/configs/: README.md  experiment.example.json
archive/pre_framework_improvements_20260714/docs/: EXPERIMENTS.md
archive/pre_framework_improvements_20260714/notebooks/00_integrated/: 统一实验入口.ipynb
archive/pre_framework_improvements_20260714/src/gpp_inversion/: __init__.py  config.py  data.py  engine.py  pipeline.py  splits.py
archive/pre_framework_improvements_20260714/tests/: test_integrated.py
configs/: README.md  experiment.example.json  production.example.json  production_observation_aware.json  production_smoke.example.json
data/: README.md  REAL_DATA.md  blind_split_v1.json  development_split_v1.json  real_data_manifest.json
docs/: EXPERIMENTS.md  EXTERNAL_ARTIFACTS.md  PRODUCTION_WORKFLOW.md
outputs/: README.md
scripts/: align_prediction_rows.py  build_ablation_report.py  build_blind_split.py  build_data_manifest.py  build_development_split.py  build_production_v2_report.py  build_round2_report.py  build_round3_report.py  check_cuda_determinism.py  compute_high_gpp_threshold.py  evaluate_deployment_domains.py  evaluate_ensemble.py  evaluate_legacy_checkpoint.py  evaluate_promotion.py  evaluate_saved_experiment.py  export_model_package.py  fit_era_stress_manifest.py  materialize_calibrated_era_validation.py  materialize_exact_era_validation.py  materialize_production_config.py  pretrain_production.py  run_ablation_suite.py  run_experiment.py  run_final_global_validation.py  (+7 more)
(+106 files in other folders)
