[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gpp-station-inversion"
version = "0.3.0"
description = "Station-scale GPP time-series inversion experiments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.6",
    "numpy>=1.23",
    "pandas>=1.5",
    "scikit-learn>=1.2",
    "torch>=2.0",
]

[project.optional-dependencies]
explainability = ["shap>=0.44"]
notebook = ["jupyterlab>=4"]
mamba = ["mamba-ssm>=2.2"]
test = ["pytest>=8"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["archive", "outputs", ".git", ".venv", "tmp*", "pytest-cache-files-*"]
addopts = ["-ra"]
filterwarnings = [
    "ignore:enable_nested_tensor is True.*:UserWarning",
    "ignore:.*:pyparsing.exceptions.PyparsingDeprecationWarning",
]
